fix(Carlsen): Verify if is first round before discarding